fixing the navigation bar overlapping the page

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,21 @@
 body {
 	margin: 0;
+	height: 1000px;
+}
+
+#main-header {
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	margin-bottom: 10px;
 }
 
 #main-nav {
 	width: 100%;
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),
 				0 2px 10px 0 rgba(0,0,0,0.12);
-	position: fixed;
 	border-bottom: 1px solid #bdc3c7;
-	z-index: 1;
+	background: #ffffff;
 }
 
 #main-wrapper {
